@@ -199,7 +199,7 @@ DPP_PROG_LINKER
 # -----------------------------------------------------------------------------
 VPR_PATH([0.40], , [AC_MSG_ERROR([*** VPR required for JCCL ***])])
 
-TWEEK_PATH_JAVA([0.17.1], ,
+TWEEK_PATH_JAVA([0.19.2], ,
                 [AC_MSG_WARN([*** Tweek Java required for editor JavaBeans ***])
                  BUILD_JAVA='N'
                 ])
